--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -107,6 +107,10 @@
   letter-spacing: var(--header-three-spacing);
 }
 
+.footerContent {
+  padding: 0 16px;
+}
+
 @media screen and (min-width: 600px) {
   .wrapper {
     max-width: 1440px;
@@ -182,6 +186,10 @@
 
   .projectDescription {
     grid-column: 1/1;
+  }
+
+  .footerContent {
+    padding: 0;
   }
 }
 
