--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -59,7 +59,7 @@
 } */
 
 .motto {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   align-self: end;
   color: hsl(var(--foreground-color));
   max-width: 590px;
@@ -197,6 +197,10 @@
   .highlightsContent {
     grid-column-gap: 16px;
     grid-template-columns: 1fr 1fr;
+  }
+
+  .motto {
+    margin-bottom: 10vh;
   }
 
   .wideProject {
