--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-top: 40px;
+  margin-top: 32px;
   position: relative;
 }
 
@@ -20,6 +20,7 @@
   width: 80%;
   grid-row: 1/1;
   grid-column: 1/1;
+  pointer-events: none;
 }
 
 .gridBackground {
@@ -113,6 +114,7 @@
 
 @media screen and (min-width: 600px) {
   .wrapper {
+    margin-top: 40px;
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
