--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -17,7 +17,7 @@
 }
 
 .cursorImage {
-  width: 80%;
+  width: 60%;
   grid-row: 1/1;
   grid-column: 1/1;
   pointer-events: none;
@@ -79,21 +79,41 @@
 .highlightsContent {
   margin-top: 16px;
   display: grid;
-  grid-gap: 96px;
+  grid-gap: 80px;
 }
 
 .project {
 }
 
 .projectImage {
+  /* height: clamp(312px, 65vh, 704px); */
+  aspect-ratio: 1 / 1;
   margin-bottom: 16px;
   background-color: hsl(var(--subtle-grey-color));
+  display: flex;
+  overflow: hidden;
+  position: relative;
+}
+
+.imageSentio {
+  height: 75%;
+  align-self: center;
+}
+
+.imageCNWeb {
+  transform: translateX(27%);
+}
+
+.imageCNMobile {
+  height: 75%;
+  position: absolute;
+  bottom: 0;
 }
 
 .projectInfo {
   padding: 0 16px;
-  display: grid;
-  grid-gap: 32px;
+  /* display: grid; */
+  /* grid-gap: 32px; */
 }
 
 .period {
@@ -104,12 +124,32 @@
 }
 
 .mediumHeader {
-  font: var(--header-three);
-  letter-spacing: var(--header-three-spacing);
+  font: var(--body);
 }
 
 .footerContent {
   padding: 0 16px;
+}
+
+.arrow {
+  display: none;
+  position: absolute;
+}
+
+.link:hover .arrow {
+  display: inline;
+  animation: arrow 0.1s ease-in both;
+  transition: 0s ease-in;
+}
+
+@keyframes arrow {
+  0% {
+    transform: translateX(0px);
+  }
+
+  100% {
+    transform: translateX(8px);
+  }
 }
 
 @media screen and (min-width: 600px) {
@@ -161,15 +201,15 @@
 
   .highlightsContent {
     margin-top: 24px;
-    grid-row-gap: 80px;
+    /* grid-row-gap: 80px; */
   }
 
   .projectInfo {
     padding: 0;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
-    grid-column-gap: 64px;
-    grid-row-gap: 16px;
+    /* grid-template-columns: auto auto; */
+    /* grid-template-rows: auto auto; */
+    /* grid-column-gap: 64px; */
+    /* grid-row-gap: 16px; */
   }
 
   .period {
@@ -187,7 +227,7 @@
   }
 
   .projectDescription {
-    grid-column: 1/1;
+    /* grid-column: 1/1; */
   }
 
   .footerContent {
@@ -202,12 +242,13 @@
   }
 
   .aboveTheFold {
-    height: 100vh;
+    height: calc(100vh - 40px);
     max-height: 900px;
   }
 
   .motto {
     padding-bottom: 40px;
+    margin-bottom: 0;
   }
 
   .wideProject {
@@ -227,8 +268,8 @@
   }
 
   .wideProject > .projectInfo {
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 16px;
+    /* grid-template-columns: 1fr 1fr; */
+    /* grid-column-gap: 16px; */
   }
 }
 
