--- a/src/pages/styles/case.module.css
+++ b/src/pages/styles/case.module.css
@@ -6,6 +6,82 @@
   grid-template-rows: max-content 1fr;
 }
 
+.aboveTheFoldReel {
+  position: relative;
+}
+
+.reelImage {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  max-width:100%;
+}
+
+.first {
+  /* z-index: 10;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+}
+
+.second {
+  /* z-index: 9;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 1s;
+}
+
+.third {
+  /* z-index: 8;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 2s;
+}
+
+.fourth {
+  /* z-index: 7;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 3s;
+}
+
+.fifth {
+  /* z-index: 6;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 4s;
+}
+
+.sixth {
+  /* z-index: 5;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 5s;
+}
+
+.seventh {
+  /* z-index: 4;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 6s;
+}
+
+.eighth {
+  /* z-index: 3;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 7s;
+}
+
+.ninth {
+  /* z-index: 2;
+  opacity: 0; */
+  animation: Reel 9s linear infinite;
+  animation-delay: 8s;
+}
+
 .wrapper {
   padding: 0 16px;
   max-width: 1440px;
@@ -161,6 +237,10 @@ svg rect > .purple-cursor {
   align-self: center;
 }
 
+.laptopAboveTheFold #es-image {
+  transform: translateX(20px);
+}
+
 @media screen and (min-width: 1240px) {
   .intro {
     grid-template-columns: 1fr 1fr;
@@ -173,6 +253,10 @@ svg rect > .purple-cursor {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 16px;
+  }
+
+  .reelImage {
+    max-width: 70%;
   }
 
   .imageWide {
@@ -234,6 +318,15 @@ svg rect > .purple-cursor {
     font-size: 13px;
     line-height: 17px;
   }
+  .laptopAboveTheFold {
+    padding: 0 clamp(16px, 4.3vw, 56px);
+  }
+
+  .reelImage {
+    max-width: 85%;
+    max-height: 90%;
+  }
+
 }
 
 @media screen and (min-width: 600px) and (max-width: 1552px) {
@@ -248,5 +341,51 @@ svg rect > .purple-cursor {
 
   .headerWrapper {
     padding: 0 clamp(16px, 4.3vw, 56px);
+  }
+}
+
+@keyframes Reel {
+  0% {
+    z-index: 10;
+  }
+
+  10% {
+    z-index: 9;
+  }
+
+  20% {
+    z-index: 8;
+  }
+
+  30% {
+    z-index: 7;
+  }
+
+  40% {
+    z-index: 6;
+  }
+
+  50% {
+    z-index: 5;
+  }
+
+  60% {
+    z-index: 4;
+  } 
+
+  70% {
+    z-index: 3;
+  }
+
+  80% {
+    z-index: 2;
+  }
+
+  90% {
+    z-index: 1;
+  }
+
+  100% {
+    z-index: 0;
   }
 }
