--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -1,13 +1,16 @@
 .wrapper {
-  margin-top: 32px;
-  position: relative;
+  /* margin-top: 32px; */
+  /* position: relative; */
 }
 
 .aboveTheFold {
-  padding: 0 16px;
-  display: grid;
-  grid-template-rows: max-content 1fr auto;
-  height: calc(100vh - 40px);
+  /* display: grid; */
+  /* grid-template-rows: max-content 1fr auto; */
+  /* height: calc(100vh - 40px); */
+  padding: 32px 16px 0 16px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .heroImage {
@@ -17,6 +20,7 @@
 }
 
 .cursorImage {
+  z-index: 1;
   width: 60%;
   grid-row: 1/1;
   grid-column: 1/1;
@@ -24,27 +28,31 @@
 }
 
 .gridBackground {
-  display: grid;
-  grid-template-columns: repeat(14, 1fr);
-  grid-template-rows: repeat(14, 1fr);
-  width: clamp(240px, 80vw, 600px);
-  height: clamp(240px, 80vw, 600px);
-  grid-row: 1/1;
-  grid-column: 1/1;
+  display: contents;
+  /* grid-template-columns: repeat(24, 1fr);
+  grid-template-rows: repeat(14, 1fr); */
+  /* width: clamp(240px, 80vw, 600px); */
+  /* height: clamp(240px, 80vw, 600px); */
+  /* grid-row: 1/1; */
+  /* grid-column: 1/1; */
+  /* mask-image: radial-gradient(#000 0%, transparent 100%); */
+  /* align-self: start; */
 }
 
 .gridCell {
   border-style: solid;
   border-width: 0.5px;
   border-color: hsl(var(--subtle-grey-color));
-  transition: all 0.5s ease-out;
+  transition: background-color 2s ease-out;
+  aspect-ratio: 1;
 }
 
 .gridCell:hover {
   /* border-width: 1px; */
   /* border-color: hsl(205, 100%, 47%); */
   /* border-color: hsl(0, 0%, 47%); */
-  background-color: hsl(var(--subtle-grey-color));
+  background-color: hsl(var(--grey-color));
+  transition: background-color 0.05s ease;
 }
 
 /* .gridRow {
@@ -60,16 +68,28 @@
 } */
 
 .motto {
-  margin-bottom: 80px;
   align-self: end;
   color: hsl(var(--foreground-color));
-  max-width: 590px;
+  max-width: 768px;
   font: var(--header-one);
   letter-spacing: var(--header-one-spacing);
+  text-wrap: balance;
 }
 
 .highlightsSection {
   margin-top: clamp(56px, 14vw, 200px);
+}
+
+.heroPart {
+  display: flex;
+  align-items: end;
+  flex-grow: 1;
+  /* grid-template-rows: 1fr max-content; */
+  /* grid-gap: 32px; */
+  /* padding: 64px 0 80px 0; */
+  /* grid-template-columns: repeat(24, 1fr); */
+  /* grid-template-rows: repeat(14, 1fr); */
+  padding-bottom: 80px;
 }
 
 .smallHeader {
@@ -85,7 +105,7 @@
 .project {
 }
 
-.projectImage {
+.projectImageContainer {
   /* height: clamp(312px, 65vh, 704px); */
   aspect-ratio: 1 / 1;
   margin-bottom: 16px;
@@ -93,6 +113,30 @@
   display: flex;
   overflow: hidden;
   position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.project:hover .projectImage {
+  filter: grayscale(0%);
+}
+
+.project:hover .projectImageContainer {
+  background-image: radial-gradient(ellipse 90% 40% at 50% -5%, rgba(191,191,191,.08), transparent 100%);
+}
+
+.projectImage {
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
+
+.bottomAligned {
+  align-items: end;
+}
+
+.bottomAligned > .projectImage {
+  max-width: 60%;
 }
 
 .imageSentio {
@@ -133,13 +177,16 @@
 
 .arrow {
   display: none;
-  position: absolute;
 }
 
-.link:hover .arrow {
+.link {
+  display: flex;
+}
+
+.project:hover .arrow {
   display: inline;
-  animation: arrow 0.1s ease-in both;
-  transition: 0s ease-in;
+  animation: arrow 0.1s ease-out both;
+  /* transition: 0.1s ease-out; */
 }
 
 @keyframes arrow {
@@ -154,15 +201,19 @@
 
 @media screen and (min-width: 600px) {
   .wrapper {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
   }
 
+  .heroPart {
+    /* grid-column: 1/3; */
+  }
+
   .motto {
-    grid-row: 2/2;
-    grid-column: 1/3;
+    /* grid-row: 9/14;
+    grid-column: 1/17; */
   }
 
   .headerWrapper {
@@ -170,13 +221,13 @@
   }
 
   .gridBackground {
-    width: clamp(300px, 50vh, 696px);
-    height: clamp(300px, 50vh, 696px);
+    /* width: clamp(300px, 50vh, 696px);
+    height: clamp(300px, 50vh, 696px); */
   }
 
   .aboveTheFold {
-    padding: 0;
-    row-gap: 40px;
+    padding: 40px 0 0 0;
+    /* row-gap: 40px; */
   }
 
   .smallHeader {
@@ -184,15 +235,17 @@
   }
 
   .heroImage {
-    justify-items: right;
-    align-items: start;
-    grid-row: 2/2;
+    align-self: center;
+    justify-self: right;
+    justify-items: center;
+    align-items: center;
+    grid-row: 1/3;
     grid-column: 2/2;
   }
 
   .gridBackground {
-    width: clamp(400px, 67vh, 696px);
-    height: clamp(400px, 67vh, 696px);
+    /* width: clamp(400px, 67vh, 696px);
+    height: clamp(400px, 67vh, 696px); */
   }
 
   .cursorImage {
@@ -242,12 +295,16 @@
   }
 
   .aboveTheFold {
-    height: calc(100vh - 40px);
-    max-height: 900px;
+    /* height: calc(100vh - 40px); */
+    /* max-height: 900px; */
+  }
+
+  .heroPart {
+    padding-bottom: 96px;
   }
 
   .motto {
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
     margin-bottom: 0;
   }
 
@@ -256,7 +313,7 @@
   }
 
   .aboveTheFold {
-    row-gap: 0;
+    /* row-gap: 0; */
   }
 
   .heroImage {
@@ -265,6 +322,11 @@
 
   .cursorImage {
     align-self: center;
+  }
+
+  .projectImage {
+    filter: grayscale(100%);
+    transition: filter 0.5s ease-out;
   }
 
   .wideProject > .projectInfo {
