--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -199,6 +199,10 @@
   }
 }
 
+.eightyPercent {
+  height: 80%;
+}
+
 @media screen and (min-width: 600px) {
   .wrapper {
     /* margin-top: 40px; */
